# src/routers/contacts.js
@@ -1,50 +1,50 @@
-import { Router } from 'express';
-import {
-  getAllContactsController,
-  getContactByIdController,
-  createContactController,
-  deleteContactController,
-  upsertContactController,
-  patchContactController,
-} from '../controllers/contacts.js';
-import { ctrlWrapper } from '../utils/ctrlWrapper.js';
-import { validateBody } from '../middlewares/validateBody.js';
-import {
-  createContactSchema,
-  updateContactSchema,
-} from '../validation/contacts.js';
-import { isValidId } from '../middlewares/isValidId.js';
-import { authenticate } from '../middlewares/authenticate.js';
-import { upload } from '../middlewares/multer.js';
+// import { Router } from 'express';
+// import {
+//   getAllContactsController,
+//   getContactByIdController,
+//   createContactController,
+//   deleteContactController,
+//   upsertContactController,
+//   patchContactController,
+// } from '../controllers/contacts.js';
+// import { ctrlWrapper } from '../utils/ctrlWrapper.js';
+// import { validateBody } from '../middlewares/validateBody.js';
+// import {
+//   createContactSchema,
+//   updateContactSchema,
+// } from '../validation/contacts.js';
+// import { isValidId } from '../middlewares/isValidId.js';
+// import { authenticate } from '../middlewares/authenticate.js';
+// import { upload } from '../middlewares/multer.js';
 
-const router = Router();
-router.use(authenticate);
-router.get('/', ctrlWrapper(getAllContactsController));
-router.get('/:contactId', isValidId, ctrlWrapper(getContactByIdController));
-router.post(
-  '/',
-  upload.single('photo'),
-  validateBody(createContactSchema),
-  ctrlWrapper(createContactController),
-);
-router.post(
-  '/register',
-  validateBody(createContactSchema),
-  ctrlWrapper(createContactController),
-);
-router.delete('/:contactId', ctrlWrapper(deleteContactController));
-router.put(
-  '/:contactId',
-  isValidId,
-  upload.single('photo'),
-  validateBody(createContactSchema),
-  ctrlWrapper(upsertContactController),
-);
-router.patch(
-  '/:contactId',
-  isValidId,
-  upload.single('photo'),
-  validateBody(updateContactSchema),
-  ctrlWrapper(patchContactController),
-);
-export default router;
+// const router = Router();
+// router.use(authenticate);
+// router.get('/', ctrlWrapper(getAllContactsController));
+// router.get('/:contactId', isValidId, ctrlWrapper(getContactByIdController));
+// router.post(
+//   '/',
+//   upload.single('photo'),
+//   validateBody(createContactSchema),
+//   ctrlWrapper(createContactController),
+// );
+// router.post(
+//   '/register',
+//   validateBody(createContactSchema),
+//   ctrlWrapper(createContactController),
+// );
+// router.delete('/:contactId', ctrlWrapper(deleteContactController));
+// router.put(
+//   '/:contactId',
+//   isValidId,
+//   upload.single('photo'),
+//   validateBody(createContactSchema),
+//   ctrlWrapper(upsertContactController),
+// );
+// router.patch(
+//   '/:contactId',
+//   isValidId,
+//   upload.single('photo'),
+//   validateBody(updateContactSchema),
+//   ctrlWrapper(patchContactController),
+// );
+// export default router;
