# src/routers/index.js
@@ -1,10 +1,10 @@
-import { Router } from 'express';
-import contactsRouter from './contacts.js';
-import authRouter from './auth.js';
+// import { Router } from 'express';
+// import contactsRouter from './contacts.js';
+// import authRouter from './auth.js';
 
-const router = Router();
+// const router = Router();
 
-router.use('/contacts', contactsRouter);
-router.use('/auth', authRouter);
+// router.use('/contacts', contactsRouter);
+// router.use('/auth', authRouter);
 
-export default router;
+// export default router;
