# swagger/paths/contacts/get.yaml
@@ -1,84 +1,84 @@
-tags:
-  - Contacts
-summary: Get list of contacts
-operationId: getContacts
-description: 'Get list of users with this endpoint'
-security:
-  - bearerAuth: []
-parameters:
-  - in: query
-    name: page
-    schema:
-      type: integer
-    example: 1
-  - in: query
-    name: perPage
-    schema:
-      type: integer
-      example: 10
-  - in: query
-    name: sortBy
-    schema:
-      type: string
-      example: '_id'
-    description: "All contact's fields can be mentioned. Default value - _id"
-  - in: query
-    name: sortOrder
-    schema:
-      type: string
-      enum: ['asc', 'desc']
-      example: 'asc'
+# tags:
+#   - Contacts
+# summary: Get list of contacts
+# operationId: getContacts
+# description: 'Get list of users with this endpoint'
+# security:
+#   - bearerAuth: []
+# parameters:
+#   - in: query
+#     name: page
+#     schema:
+#       type: integer
+#     example: 1
+#   - in: query
+#     name: perPage
+#     schema:
+#       type: integer
+#       example: 10
+#   - in: query
+#     name: sortBy
+#     schema:
+#       type: string
+#       example: '_id'
+#     description: "All contact's fields can be mentioned. Default value - _id"
+#   - in: query
+#     name: sortOrder
+#     schema:
+#       type: string
+#       enum: ['asc', 'desc']
+#       example: 'asc'
 
-responses:
-  '200':
-    description: Successfully found contacts!
-    content:
-      application/json:
-        schema:
-          type: object
-          required:
-            - status
-            - message
-            - data
-          properties:
-            status:
-              type: integer
-              example: 200
-            message:
-              type: string
-              example: Successfully found contacts!
-            data:
-              type: object
-              required:
-                - data
-                - page
-                - perPage
-                - totalItems
-                - totalPages
-                - hasNextPage
-                - hasPreviousPage
-              properties:
-                data:
-                  type: array
-                  items:
-                    $ref: '../../components/schemas/contact.yaml'
-                page:
-                  type: number
-                  example: 2
-                perPage:
-                  type: number
-                  example: 4
-                totalItems:
-                  type: number
-                  example: 4
-                totalPages:
-                  type: number
-                  example: 4
-                hasNextPage:
-                  type: boolean
-                  example: false
-                hasPreviousPage:
-                  type: boolean
-                  example: true
-  '401':
-    $ref: '../../components/responses/401.yaml'
+# responses:
+#   '200':
+#     description: Successfully found contacts!
+#     content:
+#       application/json:
+#         schema:
+#           type: object
+#           required:
+#             - status
+#             - message
+#             - data
+#           properties:
+#             status:
+#               type: integer
+#               example: 200
+#             message:
+#               type: string
+#               example: Successfully found contacts!
+#             data:
+#               type: object
+#               required:
+#                 - data
+#                 - page
+#                 - perPage
+#                 - totalItems
+#                 - totalPages
+#                 - hasNextPage
+#                 - hasPreviousPage
+#               properties:
+#                 data:
+#                   type: array
+#                   items:
+#                     $ref: '../../components/schemas/contact.yaml'
+#                 page:
+#                   type: number
+#                   example: 2
+#                 perPage:
+#                   type: number
+#                   example: 4
+#                 totalItems:
+#                   type: number
+#                   example: 4
+#                 totalPages:
+#                   type: number
+#                   example: 4
+#                 hasNextPage:
+#                   type: boolean
+#                   example: false
+#                 hasPreviousPage:
+#                   type: boolean
+#                   example: true
+#   '401':
+#     $ref: '../../components/responses/401.yaml'
